<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Creator OS</string>
    <string name="title_activity_main">Creator OS</string>
    <string name="package_name">com.creatoros.app</string>
    <string name="custom_url_scheme">com.creatoros.app</string>
    <string name="shortcut_pending_short">Pending</string>
    <string name="shortcut_pending_long">Pending messages</string>
    <string name="shortcut_offers_short">Offers</string>
    <string name="shortcut_offers_long">Brand offers</string>
    <string name="shortcut_bookings_short">Bookings</string>
    <string name="shortcut_bookings_long">Upcoming bookings</string>
    <string name="shortcut_deals_short">Deals</string>
    <string name="shortcut_deals_long">Open deals</string>
</resources>
